[package]
name = "big-json-to-csv"
version = "0.1.0"
authors = ["Dylan Frankland <dfrankland@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.41"
structopt = "0.3.3"
csv = "1.1.1"
serde = { version = "1.0.102", features = ["derive"] }

[dev-dependencies]
rand = "0.7.2"
